--- a/jaxb/pom.xml
+++ b/jaxb/pom.xml
@@ -49,6 +49,11 @@
 			<version>5.0.6.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.0</version>
+		</dependency>
+		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>${xercesImpl.version}</version>
